# pkg/server/model_credential.go
@@ -1,7 +1,7 @@
 /*
  * Moov Identity API
  *
- * Handles all identities for tracking the users of the Moov platform. 
+ * Handles all identities for tracking the users of the Moov platform.
  *
  * API version: 0.0.1
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
@@ -13,7 +13,7 @@ import (
 	"time"
 )
 
-// Credential - Description of a successful OpenID connect credential 
+// Credential - Description of a successful OpenID connect credential
 type Credential struct {
 
 	// UUID v4
@@ -28,10 +28,12 @@ type Credential struct {
 	// UUID v4
 	IdentityID string `json:"identityID,omitempty"`
 
-	// If disabled user will be unable to use this method of authentication without help from support removing the lock.
-	Enabled bool `json:"enabled,omitempty"`
-
 	CreatedOn time.Time `json:"createdOn,omitempty"`
 
 	LastUsedOn time.Time `json:"lastUsedOn,omitempty"`
+
+	DisabledOn *time.Time `json:"disabledOn,omitempty"`
+
+	// UUID v4
+	DisabledBy *string `json:"disabledBy,omitempty"`
 }
